--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: cpp
 
 before_install:
         - sudo add-apt-repository --yes ppa:beineri/opt-qt551-trusty
+        - sudo apt-get install sqlite3 libsqlite3-dev
         - sudo apt-get update -qq
 install:
         - sudo apt install qt55[QTPACKAGE] -y
