--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt5Widgets)
-find_package(Qt5Core)
+find_package(Qt5Widgets REQUIRED)
+find_package(Qt5Core REQUIRED)
+find_package(Qt5Sql REQUIRED)
 
 add_executable(Registro main.cpp registro.h registro.cpp createDB.h createDB.cpp)
-target_link_libraries(Registro Qt5::Widgets Qt5::Core)
-
+target_link_libraries(Registro Qt5::Widgets Qt5::Core Qt5::Sql)
