--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ packages:
         - cmake
 
 script:
-        mkdir build && cd build
-        cmake
-        make
+       - mkdir build && cd build
+       - cmake --version
+       - make
