--- a/config.h.in
+++ b/config.h.in
@@ -6,7 +6,7 @@
 #define PROJECT_SOURCE_VERSION "@PROJECT_SOURCE_VERSION@"
 #define PROJECT_BUILD_DATE "@PROJECT_BUILD_DATE@"
 #define PROJECT_BUILD_TIME "@PROJECT_BUILD_TIME@"
-#define PROJECT_VERSION "v1.3Beta"
+#define PROJECT_VERSION "v1.3"
 #define PROJECT_OS "GNU/Linux"
 #define PROJECT_ARCH "x86_x64"
 #define PROJECT_AUTHOR "2018 (c) Marco 'icebit' Cetica"
